Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+    <h1>Sonnet Me</h1>
+    <p>
+      I write a couplet each day, a sonnet each week, for the rest of my life. Find me
+      <a href="http://sonnet.me/">here</a>.
+    </p>
+
