--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,13 @@
-
+<div class="center hero-unit">
     <h1>Sonnet Me</h1>
-    <p>
+    <h2>
       I write a couplet each day, a sonnet each week, for the rest of my life. Find me
       <a href="http://sonnet.me/">here</a>.
-    </p>
+    </h2>
 
+<%= link_to image_tag("sonnet1.png", alt: "Sonnet1"), sonnet1_path %>
+<%= link_to image_tag("sonnet2.png", alt: "Sonnet2"), sonnet2_path %>
+<%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), sonnet3_path %>
+<%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), sonnet4_path %>
+
+</div>
