--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,31 +4,5 @@
       <a href="http://sonnet.me/">here</a>.
     </h2>
 
-	<ul class="thumbnails">
-	  <li class="span4">
-	    <div class="thumbnail">
-	      <%= link_to image_tag("sonnet1.png", alt: "Sonnet1"), sonnet1_path %>
-	      <p>May 2013</p>
-	    </div>
-	  </li>
-	  <li class="span4">
-	    <div class="thumbnail">
-	      <%= link_to image_tag("sonnet2.png", alt: "Sonnet2"), sonnet2_path %>
-	      <p>May 2013</p>
-	    </div>
-	  </li>
-	  <li class="span4">
-	    <div class="thumbnail">
-	      <%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), sonnet3_path %>
-	      <p>May 2013</p>
-	    </div>
-	  </li>
-	  <li class="span4">
-	    <div class="thumbnail">
-	      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), sonnet4_path %>
-	      <p>May 2013</p>
-	    </div>
-	  </li>
-	</ul>
-
+<%= render 'layouts/displaycase' %>
 </div>
