--- a/app/views/static_pages/sonnet3.html.erb
+++ b/app/views/static_pages/sonnet3.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'Sonnet3') %>
-<p>
-  I write a couplet each day, a sonnet each week, for the rest of my life. Find me
-  <a href="http://sonnet.me/">here</a>.
-</p>
+<div>
+    <h2>
+      I write a couplet each day, a sonnet each week, for the rest of my life. Find me
+      <a href="http://sonnet.me/">here</a>.
+    </h2>
+</div>
