--- a/app/views/layouts/_displaycase.html.erb
+++ b/app/views/layouts/_displaycase.html.erb
@@ -1,8 +1,10 @@
 <ul class="thumbnails">
   <li class="span4">
-    <div class="thumbnail">
-      <%= link_to image_tag("sonnet1.png", alt: "Sonnet1"), sonnet1_path %>
-    </div>
+	
+    <a href="#" class="thumbnail">
+      <img data-src="sonnet1.png/502x324" alt="Sonnet1">
+    </a>	
+
   </li>
   <li class="span4">
     <div class="thumbnail">
