--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,7 @@
-<div class="center hero-unit">
+<div>
     <h2>
       I write a couplet each day, a sonnet each week, for the rest of my life. Find me
       <a href="http://sonnet.me/">here</a>.
     </h2>
-
-<%= render 'layouts/displaycase' %>
 </div>
+<%= render 'layouts/displaycase' %>
