--- a/app/views/static_pages/more.html.erb
+++ b/app/views/static_pages/more.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'More') %>
-    <p>
+<div>
+    <h2>
       I write a couplet each day, a sonnet each week, for the rest of my life. Find me
       <a href="http://sonnet.me/">here</a>.
-    </p>
+    </h2>
+</div>
