--- a/app/views/layouts/_displaycase.html.erb
+++ b/app/views/layouts/_displaycase.html.erb
@@ -1,12 +1,12 @@
 <ul class="thumbnails">
-  <li class="span4">
-	
-    <a href="#" class="thumbnail">
-      <img data-src="sonnet1.png/502x324" alt="Sonnet1">
-    </a>	
-
+ 
+  <li class="span6">
+    <div class="thumbnail">
+      <%= link_to image_tag("sonnet1.png", alt: "Sonnet1"), sonnet1_path %>
+    </div>
   </li>
-  <li class="span4">
+
+  <li class="span6">
     <div class="thumbnail">
       <%= link_to image_tag("sonnet2.png", alt: "Sonnet2"), sonnet2_path %>
     </div>
