--- a/app/views/static_pages/sonnet1.html.erb
+++ b/app/views/static_pages/sonnet1.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, 'Sonnet1') %>
 <div>
     <h2>
-      I write a couplet each day, a sonnet each week, for the rest of my life. Find me
-      <a href="http://sonnet.me/">here</a>.
+      I write a couplet each day, a sonnet each week, for the rest of my life.
     </h2>
 </div>
