--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
 			<li><%= link_to "S2", sonnet2_path %></li>
 			<li><%= link_to "S3", sonnet3_path %></li>
 			<li><%= link_to "S4", sonnet4_path %></li>
+			<li><%= link_to "S4", sonnet5_path %></li>
         </ul>
       </nav>
     </div>
