--- a/app/views/static_pages/sonnet4.html.erb
+++ b/app/views/static_pages/sonnet4.html.erb
@@ -1,6 +1,9 @@
 <% provide(:title, 'Sonnet4') %>
-<div>
-    <h2>
-      I write a couplet each day, a sonnet each week, for the rest of my life.
-    </h2>
-</div>
+<ul class="thumbnails">
+ 
+  <li class="span12">
+    <div class="thumbnail">
+      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), sonnet4_path %>
+    </div>
+  </li>
+</ul>
