--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,9 @@
   </small>
   <nav>
     <ul>
-      <li><a href="http://www.dramatistsguild.com/memberdirectory/getmembership.aspx?cid=39311">Profile</a></li>
+      <li>
+	I write a couplet each day, a sonnet each week, for the rest of my life. Profile at
+	<a href="http://www.dramatistsguild.com/memberdirectory/getmembership.aspx?cid=39311">DM</a></li>
     </ul>
   </nav>
 </footer>
