--- a/app/views/static_pages/sonnet1.html.erb
+++ b/app/views/static_pages/sonnet1.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'Sonnet1') %>
-<div>
-    <h2>
-      I write a couplet each day, a sonnet each week, for the rest of my life.
-    </h2>
-</div>
+
+<ul class="thumbnails">
+ 
+  <li class="span12">
+    <div class="thumbnail">
+      <%= link_to image_tag("sonnet1.png", alt: "Sonnet1"), sonnet1_path %>
+    </div>
+  </li>
+</ul>
