--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
   <nav>
     <ul>
       <li>
-	I write a couplet each day, a sonnet each week, for the rest of my life. Profile at
+	I write a couplet each day, a sonnet each week, for the rest of my life. My profile at
 	<a href="http://www.dramatistsguild.com/memberdirectory/getmembership.aspx?cid=39311">DM</a></li>
     </ul>
   </nav>
