--- a/app/views/layouts/_displaycase.html.erb
+++ b/app/views/layouts/_displaycase.html.erb
@@ -1,3 +1,4 @@
+<body data-spy="scroll" data-target=".navbar">
 <ul class="thumbnails">
  
   <li class="span6">
@@ -27,3 +28,4 @@
     </div>
   </li>
 </ul>
+</body>
