First live version

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
     <ul>
       <li>
 	I write a couplet each day, a sonnet each week, for the rest of my life. My profile at
-	<a href="http://www.dramatistsguild.com/memberdirectory/getmembership.aspx?cid=39311">DM</a></li>
+	<a href="http://www.dramatistsguild.com/memberdirectory/getmembership.aspx?cid=39311">DG</a></li>
     </ul>
   </nav>
 </footer>
