--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,9 +8,9 @@
           <li><%= link_to "More",    more_path %></li>
           <li><%= link_to "S1", sonnet1_path %></li>
 			<li><%= link_to "S2", sonnet2_path %></li>
-			<li><%= link_to "S3", sonnet3_path %></li>
-			<li><%= link_to "S4", sonnet4_path %></li>
-			<li><%= link_to "S4", sonnet5_path %></li>
+#			<li><%= link_to "S3", sonnet3_path %></li>
+#			<li><%= link_to "S4", sonnet4_path %></li>
+#			<li><%= link_to "S5", sonnet5_path %></li>
         </ul>
       </nav>
     </div>
