--- a/app/views/static_pages/more.html.erb
+++ b/app/views/static_pages/more.html.erb
@@ -3,4 +3,28 @@
     <h2>
       I write a couplet each day, a sonnet each week, for the rest of my life.
     </h2>
+
+	<body data-spy="scroll" data-target=".navbar">
+	<ul class="thumbnails">
+
+	  <li class="span4">
+	    <div class="thumbnail">
+	      <%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), '#' %>
+	    </div>
+	  </li>
+	  <li class="span4">
+	    <div class="thumbnail">
+	      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), '#' %>
+	    </div>
+	  </li>
+	  <li class="span4">
+	    <div class="thumbnail">
+	      <%= link_to image_tag("sonnet5.png", alt: "Sonnet5"), '#' %>
+	    </div>
+	  </li>
+	</ul>
+	</body>
+
+
+
 </div>
