--- a/app/views/layouts/_displaycase.html.erb
+++ b/app/views/layouts/_displaycase.html.erb
@@ -12,19 +12,19 @@
       <%= link_to image_tag("sonnet2.png", alt: "Sonnet2"), sonnet2_path %>
     </div>
   </li>
-  <li class="span6">
+  <li class="span4">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), sonnet3_path %>
+      <%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), '#' %>
     </div>
   </li>
-  <li class="span6">
+  <li class="span4">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), sonnet4_path %>
+      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), '#' %>
     </div>
   </li>
-  <li class="span6">
+  <li class="span4">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet5.png", alt: "Sonnet5"), sonnet5_path %>
+      <%= link_to image_tag("sonnet5.png", alt: "Sonnet5"), '#' %>
     </div>
   </li>
 </ul>
