Formatting tweaks live version

--- a/app/views/layouts/_displaycase.html.erb
+++ b/app/views/layouts/_displaycase.html.erb
@@ -14,17 +14,17 @@
   </li>
   <li class="span4">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), '#' %>
+      <%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), more_path %>
     </div>
   </li>
   <li class="span4">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), '#' %>
+      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), more_path %>
     </div>
   </li>
   <li class="span4">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet5.png", alt: "Sonnet5"), '#' %>
+      <%= link_to image_tag("sonnet5.png", alt: "Sonnet5"), more_path %>
     </div>
   </li>
 </ul>
