--- a/app/views/static_pages/more.html.erb
+++ b/app/views/static_pages/more.html.erb
@@ -7,19 +7,25 @@
 	<body data-spy="scroll" data-target=".navbar">
 	<ul class="thumbnails">
 
-	  <li class="span4">
+	  <li class="span5">
 	    <div class="thumbnail">
 	      <%= link_to image_tag("sonnet3.png", alt: "Sonnet3"), '#' %>
 	    </div>
 	  </li>
-	  <li class="span4">
+	  <li class="span5">
 	    <div class="thumbnail">
 	      <%= link_to image_tag("sonnet4.png", alt: "Sonnet4"), '#' %>
 	    </div>
 	  </li>
-	  <li class="span4">
+	  <li class="span5">
 	    <div class="thumbnail">
 	      <%= link_to image_tag("sonnet5.png", alt: "Sonnet5"), '#' %>
+	    </div>
+	  </li>
+	
+	  <li class="span5">
+	    <div class="thumbnail">
+	      <%= link_to image_tag("sonnet1.png", alt: "Sonnet1"), sonnet1_path %>
 	    </div>
 	  </li>
 	</ul>
