--- a/app/views/static_pages/sonnet1.html.erb
+++ b/app/views/static_pages/sonnet1.html.erb
@@ -4,7 +4,7 @@
  
   <li class="span12">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet1big-png.001", alt: "Sonnet1"), sonnet1_path %>
+      <%= link_to image_tag("sonnet1big.png", alt: "Sonnet1"), sonnet1_path %>
     </div>
   </li>
 </ul>
