--- a/app/views/static_pages/sonnet2.html.erb
+++ b/app/views/static_pages/sonnet2.html.erb
@@ -4,7 +4,7 @@
  
   <li class="span12">
     <div class="thumbnail">
-      <%= link_to image_tag("sonnet2big-png.001", alt: "Sonnet2"), sonnet2_path %>
+      <%= link_to image_tag("sonnet2big.png", alt: "Sonnet2"), sonnet2_path %>
     </div>
   </li>
 </ul>
