Fix typos first live version

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
 	Handmade daily in New York City by
-    <a href="http://sonnet.me/">honor</a>
+    <a href="https://github.com/honor">honor</a>
   </small>
   <nav>
     <ul>
